<resources>
    <string name="app_name">FH4 Calculator</string>
    <string name="front_springs">Front Springs</string>
    <string name="rear_springs">Rear Springs</string>
    <string name="front_bars">Front Bars</string>
    <string name="rear_bars">Rear Bars</string>
    <string name="front_rebound">Front Rebound</string>
    <string name="rear_rebound">Rear Rebound</string>
    <string name="front_bump">Front Bump</string>
    <string name="rear_bump">Rear Bump</string>

    <string name="asphalt">Asphalt</string>
    <string name="rally">Rally</string>

    <string name="gearing">Set Gearing</string>
    <string name="suspension">Set Suspension</string>

    <string name="max_rpm">Max RPM</string>
    <string name="number_of_gears">NumberOfGears</string>

    <string name="toast_fill_fields">YOU MUST TO FILL THE FIELDS</string>
    <string name="toast_select_option">YOU MUST TO CHOOSE AN OPTION</string>

    <string name="select">Select the type of setting</string>
    <string name="springs_max_value">Springs MAX value</string>
    <string name="springs_min_value">Springs MIN value</string>
    <string name="front_weight">Front weight</string>
    <string name="button_calculate">Calculate</string>

    <string name="gearing_activity_text">Fill Values</string>
    <string name="rebound_max_value">Rebound MAX value</string>
    <string name="rebound_min_value">Rebound MIN value</string>

</resources>