<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".Results">


    <!-- Layout for description of results -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFrontBarsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/front_bars" />

        <TextView
            android:id="@+id/tvRearBarsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/rear_bars" />

        <TextView
            android:id="@+id/tvFrontSpringsText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/front_springs" />

        <TextView
            android:id="@+id/tvRearSpringsText"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rear_springs" />

        <TextView
            android:id="@+id/tvFrontDampingText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/front_rebound" />

        <TextView
            android:id="@+id/tvRearDampingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/rear_rebound" />

        <TextView
            android:id="@+id/tvFrontBumpText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/front_bump" />

        <TextView
            android:id="@+id/tvRearBumpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/rear_bump" />

    </LinearLayout>

    <!-- Layout for maths results -->
    <LinearLayout
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFrontBarsValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/front_bars" />

        <TextView
            android:id="@+id/tvRearBarsValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rear_bars" />

        <TextView
            android:id="@+id/tvFrontSpringsValue"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/front_springs" />

        <TextView
            android:id="@+id/tvRearSpringsValue"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rear_springs" />

        <TextView
            android:id="@+id/tvFrontDampingValue"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/front_rebound" />

        <TextView
            android:id="@+id/tvRearDampingValue"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rear_rebound" />

        <TextView
            android:id="@+id/tvFrontBumpValue"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/front_bump" />

        <TextView
            android:id="@+id/tvRearBumpValue"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/front_bump" />

    </LinearLayout>

</LinearLayout>



