<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvGearing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:text="@string/gearing_activity_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtMaxRpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:hint="@string/max_rpm"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edtNumberOfGears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/number_of_gears"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edtFinalDriveRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="Final Drive Ratio"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edtMaxSpeedRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="Max Speed Ratio"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnCalculateGearing"
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="50dp"
            android:textAlignment="center"
            android:backgroundTint="@color/radio_button_default"
            android:text="@string/button_calculate" />

        <TextView
            android:id="@+id/tvGear1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gear 1" />

        <TextView
            android:id="@+id/tvGear2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gear 2" />

        <TextView
            android:id="@+id/tvGear3"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gear 3" />

        <TextView
            android:id="@+id/tvGear4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gear 4" />

        <TextView
            android:id="@+id/tvGear5"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gear 5" />

        <TextView
            android:id="@+id/tvGear6"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gear 6" />

    </LinearLayout>
</LinearLayout>
